--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             <div class="row">
                 <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="150">
                     <div class="section-title">
-                        <h1 class="display-4 fw-semibold">Aniversario IBS 63</h1>
+                        <h1 class="display-4 fw-semibold">Aniversario IBS 64 y Día de la Familia</h1>
                         <div class="line"></div>
                         <p>Y todo lo que hagáis, hacedlo de corazón, como para el Señor y no para los hombres</p>
                     </div>
@@ -286,15 +286,16 @@
                         <div class="image-zoom-wrapper">
                             <img src="./assets/images/ani1.jpg" alt="aniversario">
                         </div>
-                        <a href="./assets/images/ani1.jpg" data-fancybox="gallery" class="iconbox"><i
+                        <a href="./assets/images/ani1.jpg" data-fancybox="gallery" class="iconbox"
+                            data-caption='<div class="cap-title">Pastor Narcés de Jesus Rodríguez y su esposa Rocío Sierra</div><div class="cap-sub">27 de julio de 2025</div>'><i
                                 class="ri-search-2-line"></i></a>
                     </div>
-
                     <div class="portfolio-item image-zoom mt-4">
                         <div class="image-zoom-wrapper">
                             <img src="./assets/images/ani2.jpg" alt="aniversario">
                         </div>
-                        <a href="./assets/images/ani2.jpg" data-fancybox="gallery" class="iconbox"><i
+                        <a href="./assets/images/ani2.jpg" data-fancybox="gallery" class="iconbox"
+                            data-caption='<div class="cap-title">Iglesia Bautista de Sogamoso, un dia muy especial</div><div class="cap-sub">27 de julio de 2025</div>'><i
                                 class="ri-search-2-line"></i></a>
                     </div>
                 </div>
@@ -302,19 +303,24 @@
                 <div class="col-md-6" data-aos="fade-down" data-aos-delay="250">
                     <div class="portfolio-item image-zoom">
                         <div class="image-zoom-wrapper">
-                            <img src="./assets/images/ibs5.1.jpeg" alt="aniversario 2">
+                            <img src="./assets/images/ani3.jpg" alt="aniversario 2">
                         </div>
-                        <a href="./assets/images/ibs5.1.jpeg" data-fancybox="gallery" class="iconbox"><i
+                        <a href="./assets/images/ani3.jpg" data-fancybox="gallery" class="iconbox"
+                            data-caption='<div class="cap-title">Hermanos Bautizados en este gran dia</div><div class="cap-sub">27 de julio de 2025</div>'><i
                                 class="ri-search-2-line"></i></a>
                     </div>
+
                     <div class="portfolio-item image-zoom mt-4">
                         <div class="image-zoom-wrapper">
-                            <img src="./assets/images/ani3.jpg" alt="aniversario 3">
+                            <img src="./assets/images/ani4.jpg" alt="aniversario 3">
                         </div>
-                        <a href="./assets/images/ani3.jpg" data-fancybox="gallery" class="iconbox"><i
+                        <a href="./assets/images/ani4.jpg" data-fancybox="gallery" class="iconbox"
+                            data-caption='<div class="cap-title">Aniversario y dia de la Familia</div><div class="cap-sub">27 de julio de 2025</div>'><i
                                 class="ri-search-2-line"></i></a>
-                        <a href="./assets/images/ani4.jpg" data-fancybox="gallery" class="iconbox"><i
-                                class="ri-search-2-line"></i></a>
+                    </div>
+
+
+                    <div class="portfolio-item image-zoom mt-4">
                         <a href="./assets/images/ani5.jpg" data-fancybox="gallery" class="iconbox"><i
                                 class="ri-search-2-line"></i></a>
                         <a href="./assets/images/ani6.jpg" data-fancybox="gallery" class="iconbox"><i
@@ -323,9 +329,20 @@
                                 class="ri-search-2-line"></i></a>
                         <a href="./assets/images/ani8.jpg" data-fancybox="gallery" class="iconbox"><i
                                 class="ri-search-2-line"></i></a>
+                        <a href="./assets/images/pre1.jpg" data-fancybox="gallery" class="iconbox"
+                            data-caption='<div class="cap-title">Presentacion de niños</div><div class="cap-sub">27 de julio de 2025</div>'><i
+                                class="ri-search-2-line"></i></a>
+                        <a href="./assets/images/pre2.jpg" data-fancybox="gallery" class="iconbox"><i
+                                class="ri-search-2-line"></i></a>
                     </div>
+
+
+
+
                 </div>
             </div>
+
+
             <!-- <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
                     <div class="portfolio-item image-zoom">
                         <div class="image-zoom-wrapper">
@@ -599,40 +616,40 @@
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <iframe src="https://www.youtube.com/embed/p3wjkkA5LPU" title="YouTube video player"
+                            <iframe src="https://www.youtube.com/embed/BWpeQ-jS9Ko" title="YouTube video player"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
                         </div>
-                        <h5 class="mt-4">Estudio Bíblico 1 Pedro - Parte XIV - 21/03/2025</h5>
+                        <h5 class="mt-4">El SIERVO DE DIOS EXALTADO Y HUMILLADO - ISAIAS 52 Y 53 - 15/08/2025</h5>
                         <p></p>
-                        <a href="https://www.youtube.com/watch?v=p3wjkkA5LPU" target="_blank">ver Video</a>
+                        <a href="https://www.youtube.com/watch?v=BWpeQ-jS9Ko" target="_blank">ver Video</a>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <iframe src="https://www.youtube.com/embed/0NMiAb4KbyY" title="YouTube video player"
+                            <iframe src="https://www.youtube.com/embed/VTfjHfujQnE" title="YouTube video player"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
                         </div>
-                        <h5 class="mt-4">Epístola a los romanos - Romanos 1:8-15 - Parte IX - 09/03/2025</h5>
+                        <h5 class="mt-4">EEPISTOLA A LOS ROMANOS - Romanos 1:18-32 - Parte XXIV - 10/08/2025</h5>
                         <p></p>
-                        <a href="https://www.youtube.com/watch?v=0NMiAb4KbyY" target="_blank">Ver video</a>
+                        <a href="https://www.youtube.com/watch?v=VTfjHfujQnE" target="_blank">Ver video</a>
                     </div>
                 </div>
                 <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
                     <div class="team-member image-zoom">
                         <div class="image-zoom-wrapper">
-                            <iframe src="https://www.youtube.com/embed/QKkvFZZwGOM" title="YouTube video player"
+                            <iframe src="https://www.youtube.com/embed/OuVpdaZOwMo" title="YouTube video player"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
                         </div>
-                        <h5 class="mt-4">Epístola a los romanos - Romanos 1:8-15 - Parte X - 16/03/2025</h5>
+                        <h5 class="mt-4">ESTUDIO BIBLICO - 1 PEDRO - Parte XXVII- 08/08/2025</h5>
                         <p></p>
-                        <a href="https://www.youtube.com/watch?v=QKkvFZZwGOM" target="_blank">ver Video</a>
+                        <a href="https://www.youtube.com/watch?v=OuVpdaZOwMo" target="_blank">ver Video</a>
                     </div>
                 </div>
             </div>
@@ -718,6 +735,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./assets/js/main.js"></script>
+    <!-- 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 -->
 </body>
 
 </html>
